add a details page to project

--- a/portfolio-project/jobs/templates/jobs/detail.html
+++ b/portfolio-project/jobs/templates/jobs/detail.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 {% load static %}
@@ -37,35 +38,15 @@
 
         <section class="jumbotron text-center">
           <div class="container">
-            <h1 class="jumbotron-heading">Louw Johan Coetzee</h1>
-            <p class="lead text-muted">I love programming and Django in particular!</p>
+            <h1 class="jumbotron-heading">Job Detail</h1>
+            <p class="lead text-muted">{{ job.summary }}</p>
+            
+            <img src="{{ job.image.url }}" />
             <p>
-              <a href="mailto:nick@zappycode.com" class="btn btn-primary my-2">Email Me</a>
-            </p>
-            <img src="{% static 'headshot.jpg' %}" />
+                <a href="{% url 'home' %}" class="btn btn-primary my-2">Back</a>
+              </p>
           </div>
         </section>
-  
-        <div class="album py-5 bg-light">
-          <div class="container">
-  
-            <div class="row">
-              {% for job in jobs.all %}
-              <div class="col-md-4">
-                <a href="{% url 'detail' job.id %}">
-                <div class="card mb-4 box-shadow">
-                  <img class="card-img-top img-fluid" src="{{ job.image.url }}">
-                  <div class="card-body">
-                    <p class="card-text">{{ job.summary }}</p>
-                  </div>
-                </div>
-              </a>
-              </div>
-              {% endfor %}
-            </div>
-  
-          </div>
-        </div>
   
       </main>
 
